fix small bug in 2 monomer rhp sim

--- a/sequence_analysis.ipynb
+++ b/sequence_analysis.ipynb
@@ -32,11 +32,11 @@
    "outputs": [],
    "source": [
     "# Number of unique monomers\n",
-    "N_MONs = 4\n",
+    "N_MONs = 3\n",
     "\n",
     "# Molar ratios of each monomer\n",
     "# ex. if N_MONs = 4: [0.5, 0.25, 0.20, 0.05]\n",
-    "MRs = [50, 0, 20, 0]\n",
+    "MRs = [33, 33, 34]\n",
     "\n",
     "# What model of copolymerization to use? (1) mayolewis (terminal) or (2) penultimate\n",
     "# NOTE FOR NOW ONLY MAYO-LEWIS IMPLEMENTED.\n",
@@ -47,19 +47,22 @@
     "#[r21, r23, r24]\n",
     "#[r31, r32, r34]\n",
     "#[r41, r42, r43]\n",
-    "RRs = ([[1, 1, 1],\n",
-    "        [1, 1.09, 1.09],\n",
-    "        [1, 1.09, 1.09],\n",
-    "        [1, 1.09, 1.09],])\n",
+    "#RRs = ([[1, 1, 1],\n",
+    "#        [1, 1.09, 1.09],\n",
+    "#        [1, 1.09, 1.09],\n",
+    "#        [1, 1.09, 1.09],])\n",
+    "RRs = ([[0.89, 1.35],\n",
+    "        [1.09, 0.69],\n",
+    "        [0.52, 0.91]])\n",
     "\n",
     "# % conversion targetted (0-1), i.e. how much of the monomer pool do you want to use\n",
     "conv = 0.5\n",
     "\n",
     "# average degree of polymerization (chain length) you are targetting at YOUR conversion, NOT at 100%.\n",
-    "avgDP = 105\n",
+    "avgDP = 100\n",
     "\n",
     "# number of polymer chains to simulate\n",
-    "N_CHAINs = 1000\n",
+    "N_CHAINs = 10000\n",
     "\n",
     "# Chain transfer % (0-1)\n",
     "# TODO: replace this with direct PDI control\n",
@@ -79,7 +82,7 @@
    "outputs": [],
    "source": [
     "# UNCOMMENT TO USE THIS CODE:\n",
-    "#run_simulation(N_MONs, N_CHAINs, MRs, RRs, avgDP, conv, CTP, PRUNE_OLIGOMERS)"
+    "run_simulation(N_MONs, N_CHAINs, MRs, RRs, avgDP, conv, CTP, PRUNE_OLIGOMERS)"
    ]
   },
   {
@@ -110,7 +113,7 @@
     "\n",
     "# Molar ratios of each monomer\n",
     "# ex. if N_MONs = 4: [0.5, 0.25, 0.20, 0.05]\n",
-    "MR = [50, 20, 15, 5, 10]\n",
+    "MR = [50,20,10,10,10]\n",
     "#MRs = [[70,30,0,0,0], [51,27,22,0,0], [50,25,20,5,0], [45,20,15,5,15]]\n",
     "# MRs = [[10, 65, 20, 5],[20, 55, 20, 5],[30, 45, 20, 5],[40, 35, 20, 5],[50, 25, 20, 5],[60, 15, 20, 5],[70, 5, 20, 5]]\n",
     "#MRs = [[10,25,60,5],[20,25,50,5],[30,25,40,5],[40,25,30,5],[50, 25, 20, 5],[60,25,10,5]]\n",
@@ -138,7 +141,7 @@
     "conv = 0.5\n",
     "\n",
     "# average degree of polymerization (chain length) you are targetting at YOUR conversion, NOT at 100%.\n",
-    "avgDPs = [50, 100, 150, 200]\n",
+    "avgDPs = [50, 100]\n",
     "#avgDP = 100\n",
     "\n",
     "# number of polymer chains to simulate\n",
@@ -416,9 +419,9 @@
    "outputs": [],
    "source": [
     "### VISUALIZE SEQUENCE SIMULATED\n",
-    "batch_no = 0\n",
+    "batch_no = 4\n",
     "seq_no = 0\n",
-    "num_seqs = 10\n",
+    "num_seqs = 15\n",
     "\n",
     "chains = []\n",
     "for i in range(num_seqs):\n",
@@ -426,9 +429,10 @@
     "\n",
     "plt.cla()   # Clear axis\n",
     "plt.clf()   # Clear figure\n",
-    "plt.figure(num=None, figsize=(60, 2), dpi=80, facecolor='w', edgecolor='k')\n",
+    "plt.figure(num=None, figsize=(55, 5), dpi=80, facecolor='w', edgecolor='k')\n",
     "ax = sns.heatmap(chains, vmin=0, vmax=df_prop.iloc[batch_no]['Mons'], linewidth=0.2, xticklabels=False, yticklabels=False)\n",
-    "plt.savefig('Figures/visual_seq_NChains_DP300.pdf')\n",
+    "plt.savefig('Figures/3mon_sys.pdf', format='pdf', bbox_inches='tight')\n",
+    "\n",
     "plt.show()\n",
     "plt.cla()   # Clear axis\n",
     "plt.clf()   # Clear figure"
@@ -611,9 +615,9 @@
     "###### PARAMS TO VARY ######\n",
     "\n",
     "# input parameters for specific chain\n",
-    "batch_ind = 2\n",
+    "batch_ind = 4\n",
     "seq_no = 0\n",
-    "num_seqs = 15\n",
+    "num_seqs = 10\n",
     "\n",
     "############################\n",
     "\n",
@@ -635,12 +639,12 @@
     "\n",
     "plt.cla()   # Clear axis\n",
     "plt.clf()   # Clear figure\n",
-    "plt.figure(num=None, figsize=(60, 2), dpi=80, facecolor='w', edgecolor='k')\n",
+    "plt.figure(num=None, figsize=(55, 5), dpi=80, facecolor='w', edgecolor='k')\n",
     "ax = sns.heatmap(binarized_chains, vmin=0, vmax=2, linewidth=0.2, xticklabels=False, yticklabels=False)\n",
+    "plt.savefig('Figures/ProK_binarized.pdf', format='pdf', bbox_inches='tight')\n",
     "plt.show()\n",
-    "#plt.savefig('Figures/visualize_hydro_NChains_DP100.pdf')\n",
     "plt.cla()   # Clear axis\n",
-    "plt.clf()   # Clear figure\n"
+    "plt.clf()   # Clear figure"
    ]
   },
   {
