cleaned up sequence plotting and added compdrift calc

--- a/sequence_analysis.ipynb
+++ b/sequence_analysis.ipynb
@@ -31,12 +31,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Number of unique monomers\n",
-    "N_MONs = 3\n",
+    "# MONOMERS USED - leave as default if theoretical\n",
+    "#mon_names = ['mon1', 'mon2', 'mon3', 'mon4', 'mon5']\n",
+    "mon_names = ['MMA', 'EHMA', 'OEGMA500', 'SPMA', 'NHSMA', 'TMAMA']\n",
+    "\n",
+    "### SET MOLECULAR WEIGHTS OF MONOMERS IN ORDER OF LABEL (labels are 1 indexed)\n",
+    "#Mw = [100.121,500,198.3,246.32, 104.15]\n",
+    "Mw = [100.121, 198.3, 500, 246.32, 183.16, 207.70] #MMA, EHMA, OEGMA500, SPMA, NHSMA, TMAMA\n",
+    "#HLBs = [8.45, 11.42, 5.125, 18.5, 4.865]\n",
+    "HLBs = [8.45, 5.125, 11.42, 18.5, 10, 10] #MMA, EHMA, OEGMA500, SPMA, placeholder, placeholder\n",
     "\n",
     "# Molar ratios of each monomer\n",
     "# ex. if N_MONs = 4: [0.5, 0.25, 0.20, 0.05]\n",
-    "MRs = [33, 33, 34]\n",
+    "MRs = [46,19,25,0,5,5]\n",
+    "\n",
+    "# Number of unique monomers - auatomatically calculated from MRs above\n",
+    "N_MONs = len(MRs)\n",
     "\n",
     "# What model of copolymerization to use? (1) mayolewis (terminal) or (2) penultimate\n",
     "# NOTE FOR NOW ONLY MAYO-LEWIS IMPLEMENTED.\n",
@@ -47,22 +57,30 @@
     "#[r21, r23, r24]\n",
     "#[r31, r32, r34]\n",
     "#[r41, r42, r43]\n",
-    "#RRs = ([[1, 1, 1],\n",
-    "#        [1, 1.09, 1.09],\n",
-    "#        [1, 1.09, 1.09],\n",
-    "#        [1, 1.09, 1.09],])\n",
-    "RRs = ([[0.89, 1.35],\n",
-    "        [1.09, 0.69],\n",
-    "        [0.52, 0.91]])\n",
+    "# FULL TABLE BELOW (MMA, EHMA, OEGMA, NHSMA, SPMA, TMAMA)\n",
+    "#RRs = ([[0.9, 1.3, 0.5, 1.1, 0.6], # MMA\n",
+    "#        [0.4, 1.3, 0.6, 1.0, 1.0], # EHMA\n",
+    "#        [0.7, 0.4, 0.6, 0.7, 0.8], # OEGMA\n",
+    "#        [0.7, 1.6, 2.0, 0.6, 0.7], # NHSMA\n",
+    "#        [1.2, 1.0, 1.5, 0.9, ?], # SPMA\n",
+    "#        [1.3, 1.7, 2.0, 0.7, ?] # TMAMA\n",
+    "#      ])\n",
+    "RRs = ([[0.9, 1.3, 1.1, 0.5, 0.6], # MMA\n",
+    "        [0.4, 1.3, 1.0, 0.6, 1.0], # EHMA\n",
+    "        [0.7, 0.4, 0.7, 0.6, 0.8], # OEGMA\n",
+    "        [1.2, 1.0, 1.5, 0.9, 0.0], # SPMA - note SPMA-TMAMA unknown, 0 placeholder.\n",
+    "        [0.7, 1.6, 2.0, 0.6, 0.7], # NHSMA\n",
+    "        [1.3, 1.7, 2.0, 0.0, 0.7], # TMAMA - note TMAMA - SPMA unknown, 0 placeholder.\n",
+    "      ])\n",
     "\n",
     "# % conversion targetted (0-1), i.e. how much of the monomer pool do you want to use\n",
-    "conv = 0.5\n",
+    "conv = 0.675\n",
     "\n",
     "# average degree of polymerization (chain length) you are targetting at YOUR conversion, NOT at 100%.\n",
-    "avgDP = 100\n",
+    "avgDP = 225\n",
     "\n",
     "# number of polymer chains to simulate\n",
-    "N_CHAINs = 10000\n",
+    "N_CHAINs = 100000\n",
     "\n",
     "# Chain transfer % (0-1)\n",
     "# TODO: replace this with direct PDI control\n",
@@ -107,17 +125,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# MONOMERS USED - leave as default if theoretical\n",
+    "mon_names = ['mon1', 'mon2', 'mon3', 'mon4', 'mon5']\n",
+    "\n",
     "# Number of unique monomers\n",
-    "N_MONs = 5\n",
+    "N_MONs = 4\n",
     "#N_MONs = [2,3,4,5]\n",
     "\n",
     "# Molar ratios of each monomer\n",
     "# ex. if N_MONs = 4: [0.5, 0.25, 0.20, 0.05]\n",
-    "MR = [50,20,10,10,10]\n",
     "#MRs = [[70,30,0,0,0], [51,27,22,0,0], [50,25,20,5,0], [45,20,15,5,15]]\n",
     "# MRs = [[10, 65, 20, 5],[20, 55, 20, 5],[30, 45, 20, 5],[40, 35, 20, 5],[50, 25, 20, 5],[60, 15, 20, 5],[70, 5, 20, 5]]\n",
     "#MRs = [[10,25,60,5],[20,25,50,5],[30,25,40,5],[40,25,30,5],[50, 25, 20, 5],[60,25,10,5]]\n",
-    "# MRs = [[46,26,19,5,4], [33,23,35,0,9], [47,24,20,0,9],[18,23,50,0,9],[57,24,10,0,9],[9,23,59,0,9]]\n",
+    "MRs = [[12,44,19,25], [42,38,11,9], [47,22,21,10],[26,23,41,10]]\n",
     "\n",
     "# reactivity ratios of monomers, ex. for 5 monomers:\n",
     "#[r12, r13, r14, r15]\n",
@@ -125,12 +145,6 @@
     "#[r31, r32, r34, r35]\n",
     "#[r41, r42, r43, r45]\n",
     "#[r51, r52, r53, r54]\n",
-    "# 4 MONOMER RHP\n",
-    "#  RRs = ([[1, 1, 1],\n",
-    "#         [1, 1.09, 1.09],\n",
-    "#         [1, 1.09, 1.09],\n",
-    "#         [1, 1.09, 1.09],])\n",
-    "# STYRENE 5TH MONOMER\n",
     "RRs = ([[1, 1, 1, 0.491],\n",
     "       [1, 1.09, 1.09, 0.53],\n",
     "       [1, 1.09, 1.09, 0.53],\n",
@@ -220,10 +234,6 @@
     "new_rc_params = {'text.usetex': False, \"svg.fonttype\": 'none'}\n",
     "matplotlib.rcParams.update(new_rc_params)\n",
     "\n",
-    "\n",
-    "#SMALL_SIZE = 20\n",
-    "#MEDIUM_SIZE = 25\n",
-    "#BIGGER_SIZE = 35\n",
     "XUGROUP_IGOR_MACRO_SIZE = 22\n",
     "\n",
     "plt.rc('font', family='Helvetica', size=XUGROUP_IGOR_MACRO_SIZE)  # controls default text sizes\n",
@@ -260,11 +270,7 @@
     "        csv_files.append(os.path.join(path, file))\n",
     "csv_files = sorted(csv_files)\n",
     "print(\"Number of sequence files:\", len(csv_files))\n",
-    "print(csv_files)\n",
-    "\n",
-    "### SET MOLECULAR WEIGHTS OF MONOMERS IN ORDER OF LABEL (labels are 1 indexed)\n",
-    "Mw = [100.121,500,198.3,246.32, 104.15]\n",
-    "HLBs = [8.45, 11.42, 5.125, 18.5, 4.865]  # 5th one is made up for Styrene - NEED TO REPLACE."
+    "print(csv_files)"
    ]
   },
   {
@@ -328,6 +334,7 @@
     "    MR3s = []\n",
     "    MR4s = []\n",
     "    MR5s = []\n",
+    "    MR6s = []\n",
     "    for name in names:\n",
     "        try:\n",
     "            # n_mons, MR1, ... MRN, n_chains, DP, conv, CTP, Filt\n",
@@ -347,6 +354,10 @@
     "                MR5s.append(int(num_vals[5]))\n",
     "            else:\n",
     "                MR5s.append(0)\n",
+    "            if len(num_vals) > 11:\n",
+    "                MR6s.append(int(num_vals[6]))\n",
+    "            else:\n",
+    "                MR6s.append(0)\n",
     "        except IndexError as err:\n",
     "            n_mons.append(4)\n",
     "            MR1s.append(0)\n",
@@ -354,13 +365,14 @@
     "            MR3s.append(0)\n",
     "            MR4s.append(0)\n",
     "            MR5s.append(0)\n",
+    "            MR6s.append(0)\n",
     "    num_seqs.append(i)\n",
     "    avg_Mns.append(AvgMn)\n",
     "    avg_Mws.append(AvgMw)\n",
     "    PDIs.append(PDI)\n",
     "    avg_DPs.append(DP)\n",
     "    \n",
-    "d = {'Batch Name': names, 'Mons': n_mons, 'MR1': MR1s, 'MR2': MR2s, 'MR3': MR3s, 'MR4': MR4s, 'MR5': MR5s, 'NC': num_seqs, 'Avg Mn': avg_Mns, 'Avg Mw': avg_Mws, 'PDI': PDIs, 'Avg DP': avg_DPs}\n",
+    "d = {'Batch Name': names, 'Mons': n_mons, mon_names[0]: MR1s, mon_names[1]: MR2s, mon_names[2]: MR3s, mon_names[3]: MR4s, mon_names[4]: MR5s, mon_names[5]: MR6s, 'NC': num_seqs, 'Avg Mn': avg_Mns, 'Avg Mw': avg_Mws, 'PDI': PDIs, 'Avg DP': avg_DPs}\n",
     "df_prop = pd.DataFrame(data=d)\n",
     "df_prop"
    ]
@@ -404,6 +416,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Compdrift analysis\n",
+    "Synthesis plots such as compositional drift, monomer consumption etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot monomer consumption compared to feeding ratios\n",
+    "\n",
+    "for i, df in tqdm_notebook(enumerate(dfs), total=len(dfs)):\n",
+    "    \n",
+    "    # create a dictionary to store counts\n",
+    "    counts = {}\n",
+    "    for mon in range(1,N_MONs+1):\n",
+    "        counts[mon] = 0\n",
+    "    total_counts = 0\n",
+    "\n",
+    "    for col in tqdm_notebook(df, total=len(df.columns)):\n",
+    "        # convert the dataframe from strings to integers\n",
+    "        df = df.apply(pd.to_numeric, errors='coerce')\n",
+    "\n",
+    "        # count the number of non-zero entries in the column\n",
+    "        col_counts = df[col][df[col] > 0].value_counts()\n",
+    "\n",
+    "        # add the counts to the dictionary\n",
+    "        for num, count in col_counts.items():\n",
+    "            counts[num] += count\n",
+    "            total_counts += count\n",
+    "\n",
+    "    # sort the dictionary by keys in ascending order\n",
+    "    counts = dict(sorted(counts.items()))\n",
+    "\n",
+    "    # calculate the percentage of each number in the dataframe\n",
+    "    percentages = {}\n",
+    "    for num, count in counts.items():\n",
+    "        percentages[num] = (count / total_counts) * 100\n",
+    "\n",
+    "    # print the percentages\n",
+    "    print(df_prop.iloc[i]['Batch Name'])\n",
+    "    for num, percentage in percentages.items():\n",
+    "        print(f\"{mon_names[num-1]}: {percentage:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Composition Heterogeneity\n",
     "- mon2mon: visualize sequences simulated (TODO: make this prettier - get code from adv. attack notebook)\n",
     "- seq2seq: Plot histogram with KDE fit of composition variance per chain around feeding fraction\n",
@@ -419,9 +481,17 @@
    "outputs": [],
    "source": [
     "### VISUALIZE SEQUENCE SIMULATED\n",
-    "batch_no = 4\n",
+    "import matplotlib.colors as colors\n",
+    "\n",
+    "# Do you want thin white line between each monomer?\n",
+    "# White line (True) helps you count # monomers in a continuous segment better\n",
+    "# No white line (False) is just prettier, easier to look at\n",
+    "WHITE_LINE = False \n",
+    "\n",
+    "# pick the batch & sequences to plot\n",
+    "batch_no = 2\n",
     "seq_no = 0\n",
-    "num_seqs = 15\n",
+    "num_seqs = 50\n",
     "\n",
     "chains = []\n",
     "for i in range(num_seqs):\n",
@@ -429,13 +499,24 @@
     "\n",
     "plt.cla()   # Clear axis\n",
     "plt.clf()   # Clear figure\n",
-    "plt.figure(num=None, figsize=(55, 5), dpi=80, facecolor='w', edgecolor='k')\n",
-    "ax = sns.heatmap(chains, vmin=0, vmax=df_prop.iloc[batch_no]['Mons'], linewidth=0.2, xticklabels=False, yticklabels=False)\n",
-    "plt.savefig('Figures/3mon_sys.pdf', format='pdf', bbox_inches='tight')\n",
+    "plt.figure(num=None, figsize=(30, 8), dpi=80, facecolor='w', edgecolor='k')\n",
+    "\n",
+    "# This CMAP is MMA, EHMA, OEGMA500, SPMA, Mon5 - as per RHPapp publication.\n",
+    "CMAP = ['white', '#ba6fba', '#d24f38', '#3b3796', '#54aabc', '#ff7bac']\n",
+    "# This CMAP is MMA, EHMA, OEGMA500, SPMA, NHSMA and TMAMA - as per Hilburg et al.\n",
+    "CMAP = ['white', '#555454', '#d74d2f', '#5a7ee6', '#e3cb45', '#3aad97', '#7d57b8']\n",
+    "\n",
+    "if WHITE_LINE:\n",
+    "    ax = sns.heatmap(chains, vmin=0, vmax=df_prop.iloc[batch_no]['Mons'], linewidth=0.1, xticklabels=False, yticklabels=False, square=True, cmap=CMAP[:(N_MONs+1)])\n",
+    "else:\n",
+    "    ax = sns.heatmap(chains, vmin=0, vmax=df_prop.iloc[batch_no]['Mons'], linewidth=0, xticklabels=False, yticklabels=False, square=True, cmap=CMAP[:(N_MONs+1)])\n",
+    "cb = ax.collections[0].colorbar\n",
+    "cb.set_ticks(np.arange(1,N_MONs+1))\n",
+    "cb.set_ticklabels(mon_names[:N_MONs+1])\n",
     "\n",
     "plt.show()\n",
     "plt.cla()   # Clear axis\n",
-    "plt.clf()   # Clear figure"
+    "plt.clf()   # Clear figure\n"
    ]
   },
   {
@@ -546,7 +627,7 @@
     "\n",
     "###### PARAMS TO VARY ######\n",
     "N_MONS = 4 # number of monomers, from 2-5\n",
-    "PARAM_2_VARY = \"NC\" # i.e., 'Batch Name', 'NC', 'Avg Mn'\n",
+    "PARAM_2_VARY = \"Batch Name\" # i.e., 'Batch Name', 'NC', 'Avg Mn'\n",
     "DISCRETE = True # note: 2 settings, discrete vs continuous to use for diff. data types\n",
     "USE_TITLE = True # Set true if you want to add a plot label i.e. for labeling which plot is which\n",
     "############################\n",
